added search info endpoint with objects
